--- a/src/components/carousel/Carousel.css
+++ b/src/components/carousel/Carousel.css
@@ -45,15 +45,14 @@
 .range {
   -webkit-appearance: none;
   width: 100%;
-  height: 5px; 
-  background-color: #d1eaff;
-  border: 5px solid #d1eaff;
+  height: 10px; 
+  background-color: rgba(209, 234, 255, 0.5);  
 }
 
 .range::-webkit-slider-thumb{
   -webkit-appearance: none;
-  width: 40px;
+  width: 50px;
   height: 60px;
-  background: url('../../assets/polygon.png') no-repeat center center;
-  cursor: pointer;
+  background: url('../../assets/polygon.png') 100% 100% no-repeat;
+  background-size: contain;
 }
