--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,25 @@
+@font-face {
+  font-family: 'GothamPro';
+  src: url(../src/fonts/GothamPro.ttf);
+}
+
 body {
+  font-family: 'GothamPro';
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+a,
+button,
+input {
+  -webkit-user-select: none;
+  /* Chrome all / Safari all */
+  -moz-user-select: none;
+  /* Firefox all */
+  -ms-user-select: none;
+  /* IE 10+ */
+  user-select: none;
+  -webkit-tap-highlight-color: rgba (0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent
 }
